--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "cookie-parser": "~1.0.1",
     "body-parser": "~1.0.0",
     "debug": "~0.7.4",
-    "ejs": "~0.8.5",
-    "less-middleware": "0.1.15",
     "ejs": "*",
+    "less-middleware": "0.1.15",
     "mongoose": "*",
     "request": "*",
     "connect-mongo": "*",
     "MD5": "*",
     "express-session": "*"
+  },
+  "devDependencies": {
+    "gulp": "^3.8.8",
+    "gulp-nodeunit-runner": "^0.2.2"
   }
 }
