--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
   },
   "devDependencies": {
     "gulp": "^3.8.8",
+    "gulp-jshint": "^1.8.5",
     "gulp-jslint": "^0.1.7",
-    "gulp-nodeunit-runner": "^0.2.2"
+    "gulp-nodeunit-runner": "^0.2.2",
+    "jshint-stylish": "^1.0.0"
   }
 }
